# ipum-lab01-hw

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  report_from_tests.html
api/: app.py  test_app.http
tests/: test_api.py
